# pico-serial-to-wifi

./: .gitignore  CMakeLists.txt  README.md  notes.txt  remake.sh  uart.sh
src/: config.hpp  led.hpp  log_buf.hpp  lwipopts.h  main.cpp  misc.hpp  tcp.hpp  tcp.hpp.orig  uart.hpp
srcbackup/: main.cpp  misc.hpp  tcp.hpp  uart.hpp
